--- a/FitUp/Info.plist
+++ b/FitUp/Info.plist
@@ -23,11 +23,11 @@
 	</dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Helpers/Fonts/Satoshi-Black.ttf</string>
-		<string>Helpers/Fonts/Satoshi-Bold.otf</string>
-		<string>Helpers/Fonts/Satoshi-Light.otf</string>
-		<string>Helpers/Fonts/Satoshi-Medium.otf</string>
-		<string>Helpers/Fonts/Satoshi-Regular.otf</string>
+		<string>Satoshi-Black.otf</string>
+		<string>Satoshi-Bold.otf</string>
+		<string>Satoshi-Light.otf</string>
+		<string>Satoshi-Medium.otf</string>
+		<string>Satoshi-Regular.otf</string>
 	</array>
 </dict>
 </plist>
